# napari-rembg

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: publish.yml
.napari-hub/: DESCRIPTION.md  config.yml
src/napari_rembg/: __init__.py  _api_client.py  _base_segmentation_widget.py  _generic_seg_widget.py  _rembg.py  _rembg_sam_widget.py  _rembg_widget.py  _rembg_widget_api.py  _widget.py  _widget_api.py  _widget_generic.py  local_predictor_widget.py  napari.yaml  remote_predictor_widget.py  segmentation_api_client.py
src/napari_rembg/_tests/: test_widget.py
src/napari_rembg/rembg_api_backend/: Dockerfile  README.md  main.py  rembg_python.py
src/rembg-api/: Dockerfile  README.md
src/rembg_api_backend/: requirements.txt
