[metadata]
name = napari-rembg
version = 0.0.2
description = AI-based foreground extraction in scientific and natural images.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MalloryWittwer/napari-rembg.git
project_urls =
    Source Code = https://github.com/MalloryWittwer/napari-rembg.git

author = Mallory Wittwer
author_email = mallory.wittwer@epfl.ch
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
install_requires =
    magicgui
    qtpy
    napari[all]>=0.4.16
    rembg

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-rembg = napari_rembg:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[options.package_data]
* = *.yaml
